--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -34,8 +34,25 @@ jobs:
     - name: Generate files
       # 编译 markdown 文件
       run: |
-        ./deploy.sh
-          
+        npm run docs:build
+      
+    - name: push blog-docs to branch pages
+      env:
+        TOKEN: ${{ secrets.GITEE_TOKEN }}
+        REF: github.com/${{github.repository}}
+        MYEMAIL: 791128058@qq.com                  # ！！记得修改为自己github设置的邮箱
+        MYNAME: ${{github.repository_owner}}          
+      run: |
+        cd _book
+        git config --global user.email "${MYEMAIL}"
+        git config --global user.name "${MYNAME}"
+        git init
+        git remote add origin https://${REF}
+        git add . 
+        git commit -m "Updated By Github Actions With Build ${{github.run_number}} of ${{github.workflow}} For Github Pages"
+        git branch -M main
+        git push --force --quiet "https://${TOKEN}@${REF}" main:pages
+
     - name: Sync Github Repos To Gitee  # 名字随便起
       uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
       with:
