--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -39,6 +39,7 @@ jobs:
     - name: push blog-docs to branch pages
       env:
         TOKEN: ${{ secrets.GITEE_TOKEN }}
+        repositoryName: ${{github.repository}}
         REF: github.com/${{github.repository}}
         MYEMAIL: 791128058@qq.com                  # ！！记得修改为自己github设置的邮箱
         MYNAME: ${{github.repository_owner}}          
@@ -47,11 +48,9 @@ jobs:
         git config --global user.email "${MYEMAIL}"
         git config --global user.name "${MYNAME}"
         git init
-        git remote add origin https://${REF}
-        git add . 
+        git add .
         git commit -m "Updated By Github Actions With Build ${{github.run_number}} of ${{github.workflow}} For Github Pages"
-        git branch -M main
-        git push --force --quiet "https://${TOKEN}@${REF}" main:pages
+        git push -f git@github.com:${MYNAME}/${repositoryName}.git master:pages
 
     - name: Sync Github Repos To Gitee  # 名字随便起
       uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
