Updated By Github Actions With Build ${{github.run_number}} of ${{github.workflow}} For Github Pages

--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -51,7 +51,7 @@ jobs:
         git add .
         git commit -m "Updated By Github Actions With Build ${{github.run_number}} of ${{github.workflow}} For Github Pages"
         git branch -M main
-        git push --force --quiet "https://${TOKEN}@${REF}" main:pages
+        git push --force --quiet "https://wu@fang@top1@github.com/blog-docs" main:pages
 
     - name: Sync Github Repos To Gitee  # 名字随便起
       uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
