--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -4,19 +4,26 @@ on:
   push:
     branches: 
       - master
+name: Sync Github Repos To Gitee
 
-- jobs:
-    build-and-deploy:
-      runs-on: ubuntu-latest
-      steps:
-      - name: Checkout
-        uses: actions/checkout@master
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-20.04
+    steps:
+
+      - name: Checkout codes
+        uses: actions/checkout@v2
 
       - name: Setup node
-          # 设置 node.js 环境
-          uses: actions/setup-node@v1
-          with:
-            node-version: '12.x'
+        # 设置 node.js 环境
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       - name: Cache node modules
         # 设置包缓存目录，避免每次下载
@@ -25,13 +32,18 @@ on:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@master
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: pages
-          FOLDER: build
-          BUILD_SCRIPT: npm install && npm run docs:build # 下载脚手架及相关安装包 && # 编译 markdown 文件
+      - name: Install dependencies
+        # 下载脚手架及相关安装包
+        run: |
+          npm install
+
+      - name: Generate files
+          uses: JamesIves/github-pages-deploy-action@master
+          env:
+            ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+            BRANCH: pages
+            FOLDER: docs/.vuepress/dist
+            BUILD_SCRIPT: npm run docs:build # 下载脚手架及相关安装包 && # 编译 markdown 文件
 
       - name: Sync Github Repos To Gitee  # 名字随便起
         uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
