--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -36,6 +36,13 @@ jobs:
         run: |
           npm run docs:build
 
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@master
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: pages
+          FOLDER: docs/.vuepress/dist
+
       - name: Sync Github Repos To Gitee  # 名字随便起
         uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
         with:
