--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -6,53 +6,33 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-20.04
+  build-and-deploy:
+    runs-on: ubuntu-latest
     steps:
+    - name: Checkout 🛎️
+      uses: actions/checkout@v2.3.1
 
-      - name: Checkout codes
-        uses: actions/checkout@v2
+    - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      run: |
+        npm install
+        npm run docs:build
 
-      - name: Setup node
-        # 设置 node.js 环境
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
+    - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      with:
+        branch: pages # The branch the action should deploy to.
+        folder: docs/.vuepress/dist # The folder the action should deploy.
 
-      - name: Cache node modules
-        # 设置包缓存目录，避免每次下载
-        uses: actions/cache@v1
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Install dependencies
-        # 下载脚手架及相关安装包
-        run: |
-          npm install
-
-      - name: Generate files
-        # 编译 markdown 文件
-        run: |
-          npm run docs:build
-
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        env:
-          ACCESS_TOKEN: ${{ secrets.GITEE_PRIVATE_KEY }}
-          BRANCH: pages
-          FOLDER: docs/.vuepress/dist
-
-      - name: Sync Github Repos To Gitee  # 名字随便起
-        uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
-        with:
-          src: github/ty-wssf  # 源端账户名(github)
-          dst: gitee/wuyilong  # 目的端账户名(gitee)
-          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}  # SSH密钥对中的私钥
-          dst_token:  ${{ secrets.GITEE_TOKEN }}  # Gitee账户的私人令牌
-          account_type: user  # 账户类型
-          clone_style: "https"  # 使用https方式进行clone，也可以使用ssh
-          debug: true  # 启用后会显示所有执行命令
-          force_update: true  # 启用后，强制同步，即强制覆盖目的端仓库
-          static_list: "blog-docs"  # 静态同步列表，在此填写需要同步的仓库名称，可填写多个
-          timeout: '600s'  # git超时设置，超时后会自动重试git操作
+    - name: Sync Github Repos To Gitee  # 名字随便起
+      uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
+      with:
+        src: github/ty-wssf  # 源端账户名(github)
+        dst: gitee/wuyilong  # 目的端账户名(gitee)
+        dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}  # SSH密钥对中的私钥
+        dst_token:  ${{ secrets.GITEE_TOKEN }}  # Gitee账户的私人令牌
+        account_type: user  # 账户类型
+        clone_style: "https"  # 使用https方式进行clone，也可以使用ssh
+        debug: true  # 启用后会显示所有执行命令
+        force_update: true  # 启用后，强制同步，即强制覆盖目的端仓库
+        static_list: "blog-docs"  # 静态同步列表，在此填写需要同步的仓库名称，可填写多个
+        timeout: '600s'  # git超时设置，超时后会自动重试git操作
