--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -9,21 +9,21 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-   ##- name: Checkout 🛎️
-   ##  uses: actions/checkout@v2.3.1
+   - name: Checkout 🛎️
+     uses: actions/checkout@v2.3.1
 
-   ##- name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-   ##  run: |
-   ##    npm install
-   ##    npm run docs:build
+   - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+     run: |
+       npm install
+       npm run docs:build
 
-   ##- name: Deploy 🚀
-   ##  uses: JamesIves/github-pages-deploy-action@4.1.4
-   ##  with:
-   ##    branch: pages # The branch the action should deploy to.
-   ##    folder: docs/.vuepress/dist # The folder the action should deploy.
+   - name: Deploy 🚀
+     uses: JamesIves/github-pages-deploy-action@4.1.4
+     with:
+       branch: pages # The branch the action should deploy to.
+       folder: docs/.vuepress/dist # The folder the action should deploy.
 
-    - name: Sync Github Repos To Gitee  # 名字随便起
+    - name: Sync Github Repos To Gitee  # 名字随便起  私有仓库无法通过这种方式同步
       uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
       with:
         src: github/ty-wssf  # 源端账户名(github)
