--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -24,7 +24,7 @@ jobs:
           folder: docs/.vuepress/dist # The folder the action should deploy.
 
   Github Repos To Gitee: # 同步到gitee仓库
-    needs: deploy
+    needs: build-and-deploy
     runs-on: ubuntu-latest
     steps:
       - name: Sync Github Repos To Gitee  # 名字随便起
